首页特效未完成

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,7 +1,7 @@
 header {
   padding: 0.45333rem 0.37333rem 0.4rem;
   height: 2.53333rem;
-  background: #0293FF;
+  background: -webkit-linear-gradient(left, #03abff, #0387ff);
 }
 
 header .item {
@@ -129,4 +129,206 @@ section .tuijian h2 {
   color: #333;
   margin: 0.42667rem 0.26667rem 0;
   font-weight: 700;
+}
+
+section .tuijian > div {
+  display: flex;
+  padding: 0.4rem 0.26667rem 0.26667rem;
+  color: #666;
+  border-bottom: 1px solid #EEE;
+}
+
+section .tuijian > div img {
+  margin-right: 0.26667rem;
+}
+
+section .tuijian > div > div:nth-child(2) {
+  width: 100%;
+}
+
+section .tuijian > div > div:nth-child(2) > div {
+  margin-bottom: 0.26667rem;
+}
+
+section .tuijian > div > div:nth-child(2) .item-t {
+  display: flex;
+  justify-content: space-between;
+}
+
+section .tuijian > div > div:nth-child(2) .item-t h3 {
+  font-size: 0.4rem;
+  color: #333;
+  font-weight: 700;
+}
+
+section .tuijian > div > div:nth-child(2) .item-t span {
+  display: flex;
+  align-items: center;
+}
+
+section .tuijian > div > div:nth-child(2) .item-t span i {
+  display: block;
+  border: 1px solid #ddd;
+  font-size: 0.24rem;
+  color: #999;
+  margin-left: 0.13333rem;
+}
+
+section .tuijian > div > div:nth-child(2) .item-shop {
+  display: flex;
+  justify-content: space-between;
+}
+
+section .tuijian > div > div:nth-child(2) .item-shop span:first-child {
+  display: flex;
+  letter-spacing: -0.02667rem;
+}
+
+section .tuijian > div > div:nth-child(2) .item-shop span:first-child .iconfont {
+  font-size: 0.29333rem;
+  color: #eee;
+}
+
+section .tuijian > div > div:nth-child(2) .item-shop span:first-child p {
+  margin-left: 0.18667rem;
+  letter-spacing: 0.01333rem;
+}
+
+section .tuijian > div > div:nth-child(2) .item-shop span:first-child .has {
+  color: #ffcf00;
+}
+
+section .tuijian > div > div:nth-child(2) .item-shop span:last-child {
+  display: flex;
+  align-items: center;
+}
+
+section .tuijian > div > div:nth-child(2) .item-shop span:last-child i {
+  display: block;
+  padding: 0.02667rem 0.08rem;
+  border-radius: 0.05333rem;
+  border: 0.01333rem solid #0090FF;
+  font-size: 0.24rem;
+  line-height: 0.29333rem;
+  margin-left: 0.13333rem;
+}
+
+section .tuijian > div > div:nth-child(2) .item-shop span:last-child i:first-child {
+  color: #0090FF;
+}
+
+section .tuijian > div > div:nth-child(2) .item-shop span:last-child i:last-child {
+  color: #FFF;
+  background: #0090FF;
+}
+
+section .tuijian > div > div:nth-child(2) .item-send {
+  display: flex;
+  justify-content: space-between;
+  font-size: 0.26667rem;
+  padding-bottom: 0.26667rem;
+  border-bottom: 1px dotted #E6E6E6;
+}
+
+section .tuijian > div > div:nth-child(2) .item-send i {
+  font-size: 0.21333rem;
+  margin: 0 0.13333rem;
+}
+
+section .tuijian > div > div:nth-child(2) .item-send span:last-child {
+  color: #999;
+}
+
+section .tuijian > div > div:nth-child(2) .item-shou {
+  display: flex;
+  justify-content: space-between;
+  font-size: 0.32rem;
+  margin-top: -0.05333rem;
+}
+
+section .tuijian > div > div:nth-child(2) .item-shou span:last-child {
+  color: #999;
+  font-size: 0.26667rem;
+}
+
+section .tuijian > div > div:nth-child(2) .item-shou span:last-child i {
+  display: inline-block;
+  transform: rotateZ(0deg);
+  font-size: 0.26667rem;
+}
+
+section .tuijian > div > div:nth-child(2) .item-jian {
+  font-size: 0.32rem;
+  margin-top: -0.10667rem;
+}
+
+section .tuijian > div > div:nth-child(2) .item-down {
+  display: none;
+  margin-top: -0.10667rem;
+}
+
+section .tuijian > div > div:nth-child(2) .item-down > div {
+  font-size: 0.32rem;
+  margin-top: 0.16rem;
+}
+
+section .tuijian > div > div:nth-child(2) .i-qian {
+  display: inline-block;
+  width: 0.34667rem;
+  height: 0.34667rem;
+  line-height: 0.34667rem;
+  color: #FFF;
+  margin-right: 0.10667rem;
+  text-align: center;
+}
+
+section .tuijian > div > div:nth-child(2) .shou {
+  background: #70BC46;
+}
+
+section .tuijian > div > div:nth-child(2) .jian {
+  background: #F07373;
+}
+
+section .tuijian > div > div:nth-child(2) .zhe {
+  background: #F07373;
+}
+
+section .tuijian > div > div:nth-child(2) .te {
+  background: #F1884F;
+}
+
+section .tuijian > div > div:nth-child(2) .fan {
+  background: #54CE75;
+}
+
+footer {
+  position: fixed;
+  bottom: 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  height: 1.33333rem;
+  font-size: 0.29333rem;
+  background: #FFF;
+}
+
+footer > a {
+  flex: 1;
+  display: block;
+  color: #aaa;
+  text-align: center;
+}
+
+footer > a .iconfont {
+  font-size: 0.56rem;
+}
+
+footer > a p {
+  margin-top: 0.13333rem;
+}
+
+footer .choose {
+  color: #009FFF;
 }
