--- a/assets/css/faxian.css
+++ b/assets/css/faxian.css
@@ -1,4 +1,7 @@
 header {
+  position: fixed;
+  z-index: 10;
+  width: 100%;
   height: 1.17333rem;
   background: -webkit-linear-gradient(left, #03abff, #0387ff);
   font-size: 0.48rem;
@@ -8,10 +11,14 @@ header {
   font-weight: 700;
 }
 
+section {
+  padding-top: 1.17333rem;
+}
+
 section nav a {
   display: flex;
   justify-content: space-between;
-  width: 41.8666666666667%;
+  width: 41.6666666666667%;
   height: 1.04rem;
   float: left;
   padding: 0.64rem 0.4rem;
@@ -53,6 +60,7 @@ section nav a:first-child p {
 
 section nav a:first-child img {
   width: 2rem;
+  height: 2rem;
   margin: 0.24rem 0.69333rem 0;
 }
 
@@ -83,13 +91,13 @@ section .ad img {
   height: 2.33333rem;
 }
 
-section section .header {
+section > section .header {
   height: 1.12rem;
   padding: 0.4rem 0.26667rem;
   text-align: center;
 }
 
-section section .header h2 {
+section > section .header h2 {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -97,14 +105,14 @@ section section .header h2 {
   font-size: 0.48rem;
 }
 
-section section .header h2 div:first-of-type {
+section > section .header h2 div:first-of-type {
   position: relative;
   width: 0.61333rem;
   height: 0.16rem;
   text-align: center;
 }
 
-section section .header h2 div:first-of-type span:first-child {
+section > section .header h2 div:first-of-type span:first-child {
   position: absolute;
   top: 50%;
   left: 0;
@@ -114,7 +122,7 @@ section section .header h2 div:first-of-type span:first-child {
   border-top: 0.02667rem solid #333;
 }
 
-section section .header h2 div:first-of-type span:last-child {
+section > section .header h2 div:first-of-type span:last-child {
   position: absolute;
   top: 0;
   left: 0.53333rem;
@@ -125,7 +133,7 @@ section section .header h2 div:first-of-type span:last-child {
   background: #333;
 }
 
-section section .header h2 div:last-of-type {
+section > section .header h2 div:last-of-type {
   position: relative;
   width: 0.61333rem;
   height: 0.16rem;
@@ -133,7 +141,7 @@ section section .header h2 div:last-of-type {
   margin-left: 0.13333rem;
 }
 
-section section .header h2 div:last-of-type span:first-child {
+section > section .header h2 div:last-of-type span:first-child {
   position: absolute;
   top: 50%;
   left: 0;
@@ -143,7 +151,7 @@ section section .header h2 div:last-of-type span:first-child {
   border-top: 0.02667rem solid #333;
 }
 
-section section .header h2 div:last-of-type span:last-child {
+section > section .header h2 div:last-of-type span:last-child {
   position: absolute;
   top: 0;
   left: 0;
@@ -154,64 +162,83 @@ section section .header h2 div:last-of-type span:last-child {
   background: #333;
 }
 
-section section .header h2 i {
+section > section .header h2 i {
   font-size: 0.42667rem;
   color: #f12c2c;
   margin-right: 0.13333rem;
   margin-left: 0.2rem;
 }
 
-section section .header p {
+section > section .header p {
   color: #999;
   font-size: 0.32rem;
   margin-top: 0.21333rem;
 }
 
-section section .section {
+section > section .section {
   padding: 0 0.26667rem;
 }
 
-section section .section > div {
+section > section .section > div {
   display: flex;
   justify-content: space-between;
 }
 
-section section .section > div > div {
+section > section .section > div > a {
+  position: relative;
+  display: block;
   flex: 1;
   font-size: 0.29333rem;
 }
 
-section section .section > div > div img {
+section > section .section > div > a img {
   width: 2.96rem;
   margin-bottom: 0.24rem;
 }
 
-section section .section > div > div p:first-of-type {
+section > section .section > div > a p:first-of-type {
   color: #333;
   margin-bottom: 0.45333rem;
 }
 
-section section .section > div > div p:last-of-type {
+section > section .section > div > a p:last-of-type {
   color: #f94843;
 }
 
-section section .section > div > div p:last-of-type span {
+section > section .section > div > a p:last-of-type span {
   margin-left: 0.16rem;
   color: #999;
+  text-decoration: line-through;
 }
 
-section section .section > a {
+section > section .section > div > a > span {
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: block;
+  padding: 0.13333rem 0.16rem;
+  background: #5c5c5c;
+  font-size: 0.32rem;
+  color: #fff;
+}
+
+section > section .section > a {
   clear: both;
   display: block;
-  padding: 0.8rem 0 0.4rem;
+  padding: 0.4rem 0;
   font-size: 0.34667rem;
   color: #999;
   text-align: center;
 }
 
-section section .tiao {
+section > section .tiao {
   padding: 0 0.4rem;
   height: 0.26667rem;
+  background: #eee;
+}
+
+section .di {
+  height: 1.33333rem;
   background: #eee;
 }
 
