--- a/assets/scss/faxian.scss
+++ b/assets/scss/faxian.scss
@@ -3,9 +3,11 @@
     @return $px / 75px * 1rem; // 108为移动端的分辨率
 }
 
-
 header {
-    height: rem(88px); // background: red;
+    position: fixed;
+    z-index: 10;
+    width: 100%;
+    height: rem(88px);
     background: -webkit-linear-gradient(left, #03abff, #0387ff);
     font-size: rem(36px);
     line-height: rem(88px);
@@ -15,11 +17,13 @@ header {
 }
 
 section {
+    padding-top: rem(88px);
+
     nav {
         a {
             display: flex;
-            justify-content: space-between;
-            width: 41.8666666666667%;
+            justify-content: space-between; // width: rem(312.5px); 
+            width: 41.6666666666667%;
             height: rem(78px);
             float: left;
             padding: rem(48px) rem(30px);
@@ -62,6 +66,7 @@ section {
 
                 img {
                     width: rem(150px);
+                    height: rem(150px);
                     margin: rem(18px) rem(52px) 0;
                 }
             }
@@ -93,7 +98,7 @@ section {
         }
     }
 
-    section {
+    >section {
 
         .header {
             height: rem(84px);
@@ -185,7 +190,9 @@ section {
                 display: flex;
                 justify-content: space-between;
 
-                >div {
+                >a {
+                    position: relative;
+                    display: block;
                     flex: 1;
                     font-size: rem(22px);
 
@@ -205,7 +212,19 @@ section {
                         span {
                             margin-left: rem(12px);
                             color: #999;
+                            text-decoration: line-through;
                         }
+                    }
+
+                    >span {
+                        position: absolute;
+                        top: 0;
+                        left: 0;
+                        display: block;
+                        padding: rem(10px) rem(12px);
+                        background: #5c5c5c;
+                        font-size: rem(24px);
+                        color: #fff;
                     }
                 }
             }
@@ -213,7 +232,7 @@ section {
             >a {
                 clear: both;
                 display: block;
-                padding: rem(60px) 0 rem(30px);
+                padding: rem(30px) 0;
                 font-size: rem(26px);
                 color: #999;
                 text-align: center;
@@ -225,6 +244,11 @@ section {
             height: rem(20px);
             background: #eee;
         }
+    }
+
+    .di {
+        height: rem(100px);
+        background: #eee;
     }
 }
 
