--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -3,6 +3,9 @@
     @return $px / 75px * 1rem; // 108为移动端的分辨率
 }
 
+// html {
+//     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+// }
 header {
     padding: rem(34px) rem(28px) rem(30px);
     height: rem(190px);
@@ -87,8 +90,15 @@ header {
 
 section {
     .topbar {
+        width: 100%;
+        overflow: hidden;
+
         .topbar1 {
+            display: flex;
+            width: 200%;
+
             >div {
+                width: 50%;
                 display: flex;
                 flex-wrap: wrap;
 
@@ -99,6 +109,10 @@ section {
                     text-align: center;
                     font-size: rem(24px);
                     color: #666;
+
+                    img {
+                        width: rem(90px);
+                    }
 
                     p {
                         margin-top: rem(14px);
@@ -140,13 +154,14 @@ section {
             font-weight: 700;
         }
 
-        >div {
+        >a {
             display: flex;
             padding: rem(30px) rem(20px) rem(20px);
             color: #666;
-            border-bottom: 1px solid #EEE;
+            border-bottom: rem(1px) solid #EEE;
 
             img {
+                width: rem(130px);
                 margin-right: rem(20px);
             }
 
@@ -173,7 +188,7 @@ section {
 
                         i {
                             display: block;
-                            border: 1px solid #ddd;
+                            border: rem(1px) solid #ddd;
                             font-size: rem(18px);
                             color: #999;
                             margin-left: rem(10px);
@@ -234,7 +249,7 @@ section {
                     justify-content: space-between;
                     font-size: rem(20px);
                     padding-bottom: rem(20px);
-                    border-bottom: 1px dotted #E6E6E6;
+                    border-bottom: rem(1.5px) dashed #E6E6E6;
 
                     i {
                         font-size: rem(16px);
@@ -309,6 +324,11 @@ section {
                 }
             }
         }
+    }
+
+    .di {
+        height: rem(100px);
+        background: #eee;
     }
 }
 
